--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "jsonld-signatures": "^11.0.0"
   },
   "devDependencies": {
-    "@digitalbazaar/data-integrity-context": "github:digitalbazaar/data-integrity-context#initial",
-    "@digitalbazaar/ed25519-multikey": "github:digitalbazaar/ed25519-multikey#initial",
-    "@digitalbazaar/eddsa-2022-cryptosuite": "github:digitalbazaar/eddsa-2022-cryptosuite#initial",
-    "@digitalbazaar/multikey-context": "github:digitalbazaar/multikey-context#initial",
+    "@digitalbazaar/data-integrity-context": "^1.0.0",
+    "@digitalbazaar/ed25519-multikey": "^1.0.0",
+    "@digitalbazaar/eddsa-2022-cryptosuite": "^1.0.0",
+    "@digitalbazaar/multikey-context": "^1.0.0",
     "@digitalbazaar/security-document-loader": "^2.0.0",
     "c8": "^7.11.3",
     "chai": "^4.3.6",
