Support `base64url` multibase encoding and custom `createProofValue`.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "base58-universal": "^2.0.0",
+    "base64url-universal": "^2.0.0",
     "jsonld-signatures": "^11.0.0"
   },
   "devDependencies": {
