Update context to v2.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jsonld-signatures": "^11.2.0"
   },
   "devDependencies": {
-    "@digitalbazaar/data-integrity-context": "^1.0.0",
+    "@digitalbazaar/data-integrity-context": "digitalbazaar/data-integrity-context#drop-support-for-node-16",
     "@digitalbazaar/ed25519-multikey": "^1.0.0",
     "@digitalbazaar/eddsa-2022-cryptosuite": "^1.0.0",
     "@digitalbazaar/multikey-context": "^1.0.0",
