--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@digitalbazaar/data-integrity-context": "digitalbazaar/data-integrity-context#drop-support-for-node-16",
     "@digitalbazaar/ed25519-multikey": "^1.0.0",
-    "@digitalbazaar/eddsa-2022-cryptosuite": "^1.0.0",
+    "@digitalbazaar/eddsa-rdfc-2022-cryptosuite": "digitalbazaar/eddsa-rdfc-2022-cryptosuite#update-name-and-test",
     "@digitalbazaar/multikey-context": "^1.0.0",
     "@digitalbazaar/security-document-loader": "^2.0.0",
     "c8": "^7.11.3",
