--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "jsonld-signatures": "^11.2.0"
   },
   "devDependencies": {
-    "@digitalbazaar/data-integrity-context": "digitalbazaar/data-integrity-context#drop-support-for-node-16",
+    "@digitalbazaar/data-integrity-context": "^2.0.0",
     "@digitalbazaar/ed25519-multikey": "^1.0.0",
-    "@digitalbazaar/eddsa-rdfc-2022-cryptosuite": "digitalbazaar/eddsa-rdfc-2022-cryptosuite#update-name-and-test",
+    "@digitalbazaar/eddsa-2022-cryptosuite": "^1.0.0",
     "@digitalbazaar/multikey-context": "^1.0.0",
     "@digitalbazaar/security-document-loader": "^2.0.0",
     "c8": "^7.11.3",
