--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,9 @@ jobs:
       - run: npm install
       - name: Generate coverage report
         run: npm run coverage-ci
-#      - name: Upload coverage to Codecov
-#        uses: codecov/codecov-action@v3
-#        with:
-#          file: ./coverage/lcov.info
-#          fail_ci_if_error: true
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage/lcov.info
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
